# dq-tool

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  KNOWLEDGE.md  README.md  pyproject.toml
.github/: CODEOWNERS  mergeable.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
benchmarks/: README.md  download_data.sh  nyc_taxi_validation.yaml  run_benchmark.py
docs/: .gitignore  eleventy.config.js  package-lock.json  package.json
docs/scripts/: extract_api.py
docs/src/: index.md  release-notes.md
examples/: adbc_sqlite_checks.yaml  adbc_sqlite_example.py  analyzers_example.py  anomaly_detection_example.py  basic_validation.py  intelligent_rule_suggestions_example.py  metrics_repository_example.py  orders.csv  output_results.yaml  output_results_example.py  secret_backed_connections.yaml  showcase_all_rules.yaml  showcase_data.csv  showcase_validation.py  users.csv
src/qualink/: __init__.py  __main__.py  cli.py
tests/: conftest.py
tests/checks/: test_check.py
tests/comparison/: test_schema_match.py
tests/config/: test_builder.py  test_object_store.py
tests/constraints/: test_approx_count_distinct.py  test_approx_quantile.py  test_assertion.py  test_column_count.py  test_column_exists.py  test_completeness.py  test_compliance.py  test_custom_sql.py  test_distinctness.py  test_format.py  test_max_length.py  test_min_length.py  test_pattern_match.py  test_size.py  test_statistics.py  test_unique_value_ratio.py  test_uniqueness.py
tests/core/: test_constraint.py  test_level.py  test_logging_mixin.py  test_result.py  test_suite.py
tests/formatters/: test_base.py  test_human_formatter.py  test_json_formatter.py  test_markdown_formatter.py
tests/unit/: test_cli.py
(+181 files in other folders)
