[build-system]
requires = ["flit_core==3.12.0"]
build-backend = "flit_core.buildapi"

[project]
name = "qualink"
version = "0.0.1"
description = "Blazing fast data quality framework for Python, built on Apache DataFusion"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Pavan Kumar Gopidesu"},
]
maintainers = [
    { name = "Pavan Kumar Gopidesu"},
]
keywords = ["data", "quality", "dq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12"
dependencies = [
    "datafusion>=51.0.0",
    "pyarrow>=15.0.0",
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "prek",
    "ty>=0.0.18",
]

[tool.hatch.build.targets.wheel]
package = ["src/qualink"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # Pycodestyle
    "W", # Pycodestyle
    "I", # Isort
    "UP", # Pyupgrade
    "RUF", # Ruff specific rules
    "TID", # Flake8-tidy-imports
    "ISC", # Flake8-implicit-str-concat
    "C4", # Flake8-comprehensions
    "PT", # Flake8-pytest-style
    "TCH", # Flake8-type-checking
    "B", # Flake8-bugbear
]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.rules]
unresolved-import = "ignore"
